--- a/encuesta1/index.html
+++ b/encuesta1/index.html
@@ -131,7 +131,7 @@
     @media (max-width:450px){
         .form{
             /* padding: 3.5em 1em; */
-            /* background-color: aqua; */
+            background-color: aqua;
             width: 100%;
             border: none;
         }
