--- a/encuesta3/index.html
+++ b/encuesta3/index.html
@@ -20,6 +20,9 @@
             background-size: cover;
             font-size: 1.2rem;
         }
+        h2{
+            font-size: 2em;
+        }
         /* =================================== FROM =================================== */
         .form{
             width: 90%;
